deploy/retrieveUnpackaged/objects/Rejection__c.object
<CustomObject>
    <description>Used to track the rejection quota and the total number of rejections a rep has used.
Used in conjunction with Apex Code.</description>
    <fields>
        <fullName>Quota__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the max number of rejections allowed.</description>
        <inlineHelpText>This is the max number of rejections allowed for this user.</inlineHelpText>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the number of rejections a user has used for that month.</description>
        <inlineHelpText>This is the number of rejections that have been used by the rep.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rejections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rejection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quota__c</columns>
        <columns>Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rejection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rejections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>